--- a/index .html
+++ b/index .html
@@ -65,7 +65,7 @@
 					<button type="image" id="mutebtn" class="btn"><img src="images/btn_unmute100.png"
 							class="img_unmute img_btn"></button>
 					<button type="image" id="stopbtn" class="btn"><img src="images/btn_stop100.png"
-							class="img_btn"></button>
+							class="img_btn img_stop"></button>
 					<button type="image" id="volumebtn" class="btn"><img src="images/btn_begin100.png"
 							class="img_btn"></button>
 					<button type="image" id="ccbtn" class="btn"><img src="images/btn_cc_100.png"
@@ -92,7 +92,7 @@
 				
 				
 					<select id="text-track" class="transcript_lan show-hide">
-						<option>Select language</option>
+						<option>Select subtitle language </option>
 						<option value="en">English</opttion>
 						<option value="fr">Spanish</option>
 
