switch buttonand  Video at the end added

--- a/index .html
+++ b/index .html
@@ -19,7 +19,7 @@
 
 		<section class="col1">
 
-			<video id="vid" width="" poster="./images/videoposter.png" >
+			<video id="vid" width="" poster="./images/videoposter.png" controls>
 
 
 				<source src="assets/Spices.mp4" id="spices" type="video/mp4">
