--- a/index .html
+++ b/index .html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-	<h1>Project 3 Dynamic Media Player</h1>
+	<h1>Spices and its Health Benefits</h1>
 
 	<main id="container">
 
@@ -66,7 +66,7 @@
 							class="img_unmute img_btn"></button>
 					<button type="image" id="stopbtn" class="btn"><img src="images/btn_stop100.png"
 							class="img_btn img_stop"></button>
-					<button type="image" id="volumebtn" class="btn"><img src="images/btn_begin100.png"
+					<button type="image" id="volumebtn" class="btn"><img src="images/btn_volume-01.png"
 							class="img_btn"></button>
 					<button type="image" id="ccbtn" class="btn"><img src="images/btn_cc_100.png"
 							class="img_btn"></button>
