--- a/index.html
+++ b/index.html
@@ -2,25 +2,22 @@
 <html lang="en">
 
 <head>
-	<title>Project 3 Dynamic Media Player</title>
+	<title>Dynamic Media Player</title>
 	<meta charset="utf-8">
 
 	<link rel="stylesheet" href="c/main.css">
-	<script src="j/video_helpers.js" defer></script>
-	<script src="j/transcript.js" defer></script>
-	<script type="module" src="j/main.js" defer></script>
+	<script src="j/video_helpers.js"></script>
+	<script src="j/transcript.js"></script>
+	<script type="module" src="j/main.js"></script>
 
 </head>
 
 <body>
-	<h1>Spices and its Health Benefits</h1>
+	<h1>Spices and its Health Benefits Talk Show</h1>
 
 	<main id="container">
-
 		<section class="col1">
-
 			<video id="vid" width="" poster="./images/videoposter.png">
-
 
 				<source src="assets/Spices.mp4" id="spices" type="video/mp4">
 				<source src="assets/Spices.webm" id="spicesweb" type="video/webm">
@@ -85,60 +82,54 @@
 							class="img_btn img_stop"></button>
 					<button type="image" id="volumebtn" class="btn"><img src="images/btn_volume.png"
 							class="img_btn volumebtn"></button>
-					<input type="range" id="volumeslider" class="volume" min="0" max="100" value="100">
+					<input type="range" id="volumeslider" class="volume" min="0" max="100" value="100" step="1">
 					<button type="image" id="ccbtn" class="btn"><img src="images/btn_cc_100.png"
-						class="img_btn ccbtn"></button>
+							class="img_btn ccbtn"></button>
+					<button type="image" id="chanelbtn" class="btn"><img src="images/youtube.png" class="img_btn chbtn"
+							class="btn"></button>
+					<span class="trans_container">Tt</span>
 
-					<button type="image" id="chanelbtn" class="btn"><img src="images/youtube.png"
-							class="img_btn chbtn" class="btn"></button>
-
-					
 
 					<!--<button type="image" id="seekinfobtn" class="btn"><img src="images/btn_playred100.png"></button>-->
-
-
 				</div>
-				<div class="selection">
 
+				<div class="selection">
 					<select id="video_select show-hide">
 						<option>Select a video </option>
 						<option value="assets/Spices.mp4">Spices and Health(mp4)</option>
 						<option value="assets/Spices.webm">Spices and health(webm)</option>
 						<option value="assets/Cinnamonstory.mp4">Origin Of Cinnamon</option>
-
 					</select>
-
 				</div>
+
 				<div class="subtitles">
 
-
 					<select id="text-track" class="transcript_lan show-hide">
-						<option>Select subtitle language </option>
+						<option>Select subtitle </option>
 						<option value="en">English</opttion>
 						<option value="es">Spanish</option>
-
 					</select>
+				</div>
 
-					<!--<select id="show-hide" class="transcript_lan show-hide">
+				<div class="showtranscript">
+				  <h3><a id="show-hide" href="#">Show Transcript</a></h3>
+				  <a id="transcript-en" href="captions/spices.vtt">English</a>
+				  <a id="transcript-es" href="subtitles/spanish.vtt">Spanish</a>
+				  <div id="transcript"></div>
+				 <!--<select id="show-hide" class="transcript_lan show-hide">
 						<option>Show Transcript</option>
 						<option value="en">English</opttion>
 						<option value="es">Spanish</option>
 						<div id="transcript"></div>
 					</select>-->
-
-					<h3><a id="show-hide" href="#">Show Transcript</a></h3>
-					<a id="transcript-en" href="captions/spices.vtt">English</a>
-					<a id="transcript-es" href="subtitles/spanish.vtt">Spanish</a>
-					<div id="transcript"></div>
-
 				</div>
+
 
 			</div>
 
 			<div class="pop hide">
 				<img class="thumbnail" src="">
 				<p class="title"></p>
-
 			</div>
 
 		</section>
