--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-	<h1>Spices and its Health Benefits Talk Show</h1>
+	<h1>Spices and its Health Benefit Bulletein</h1>
 
 	<main id="container">
 		<section class="col1">
@@ -112,6 +112,7 @@
 				</div>
 
 				<div class="showtranscript">
+					
 				  <h3><a id="show-hide" href="#">Show Transcript</a></h3>
 				  <a id="transcript-en" href="captions/spices.vtt">English</a>
 				  <a id="transcript-es" href="subtitles/spanish.vtt">Spanish</a>
