commit video change updated

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 	<main id="container">
 		<section class="col1">
-			<video id="vid" width="" poster="./images/videoposter.png" controls>
+			<video id="vid" width="" poster="./images/videoposter.png" >
 
 				<source src="assets/Spices.mp4" id="spices" type="video/mp4">
 				<source src="assets/Spices.webm" id="spicesweb" type="video/webm">
