--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 				<track id="en" kind="captions" label="English (Captions)" srclang="en" src="captions/spices.vtt"
 					default>
 				<track id="es" kind="subtitles" label="Espanol(Subtitles)" srclang="es" src="subtitles/spanish.vtt">
-				<track id="eng" kind="captions" label="English(captions)" srclang="en" src="captions/cinnamon.vtt">
+				<track id="vid2en" kind="captions" label="English(captions)" srclang="en" src="captions/cinnamon.vtt">
 				<p>Your broweser does not support video.<a
 						href="https://studio.youtube.com/video/_hKvxx5EpRk/edit">Click Here</a> to the watch the video
 				</p>
@@ -108,6 +108,7 @@
 						<option value="off">Off</option>
 						<option value="en">English</opttion>
 						<option value="es">Spanish</option>
+						<option value="eng">English(OC)</option>
 					</select>
 				</div>
 
@@ -115,6 +116,7 @@
 					<h3><a id="show-hide" href="#">Show Transcript</a></h3>
 					<a id="transcript-en" href="captions/spices.vtt">English</a>
 					<a id="transcript-es" href="subtitles/spanish.vtt">Spanish</a>
+					<a id="transcript-en-vid2" href="subtitles/cinnamon.vtt">English(OC)</a>
 					<div id="transcript"></div>
 					
 				</div>
