--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 					<h3><a id="show-hide" href="#">Show Transcript</a></h3>
 					<a id="transcript-en" href="captions/spices.vtt">English</a>
 					<a id="transcript-es" href="subtitles/spanish.vtt">Spanish</a>
-					<a id="transcript-en-vid2" href="subtitles/cinnamon.vtt">English(OC)</a>
+					<a id="transcript-en-vid2" href="captions/cinnamon.vtt">English(OC)</a>
 					<div id="transcript"></div>
 					
 				</div>
