--- a/index.html
+++ b/index.html
@@ -99,9 +99,9 @@
 						<button type="image" id="stopbtn" class="btn"><img src="images/btn_stop100.png" class="img_btn img_stop"></button>
 						<button type="image" id="volumebtn" class="btn"><img src="images/btn_volume.png" class="img_btn volumebtn"></button>
 						<input type="range" id="volumeslider" class="volume" min="0" max="100" value="100" step="1">
-						<button type="image" id="ccbtn" class="btn"><img src="images/btn_cc_100.png" class="img_btn ccbtn"></button>
-						<!--<button type="image" id="ytbtn" class="btn"><img src="images/youtube.png" class="img_btn ytbtn btn"></button>-->
-						<span id="ccbtn" class="btn"> [CH^]</span>
+							<!--<button type="image" id="ccbtn" class="btn"><img src="images/btn_cc_100.png" class="img_btn ccbtn"></button>
+					   <button type="image" id="ytbtn" class="btn"><img src="images/youtube.png" class="img_btn ytbtn btn"></button>-->
+						<span id="ccbtn" class="btn"> [CC]</span>
 						<span id="chbtn" class="btn"> [CH^]</span>
                     	<span id="ttbtn" class="trans_container btn"> [TT] </span>
 
